<resources>
    <string name="app_name">Notes</string>

    <string name="lorem_short">Lorem ipsum</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis vulputate convallis. Phasellus vel tincidunt diam. In hac habitasse platea dictumst. Suspendisse nunc elit, ornare eu sem non, molestie convallis metus. In enim libero, porta quis mauris quis, scelerisque lacinia leo. Sed id pulvinar nisi, sed facilisis lorem. Morbi condimentum nulla quis ipsum gravida egestas. Sed consectetur, orci eget luctus varius, arcu erat commodo urna, eget vulputate nunc lacus quis lacus. Nullam ut facilisis quam. Aliquam rutrum id quam et cursus. Donec vel sollicitudin neque, vel laoreet arcu. Phasellus quis lacinia justo, a semper elit. Nulla eleifend, diam sit amet mattis feugiat, ex ligula rhoncus lorem, sed accumsan tellus lacus sit amet neque. Nulla hendrerit ultrices quam, eget ornare arcu porttitor eu. Duis fringilla arcu sit amet ipsum imperdiet efficitur. Nulla pulvinar elit a erat scelerisque, eu commodo lacus feugiat.</string>
    <string name="notes">Notes</string>
    <string name="articles">Articles</string>
    <string name="reminders">Reminders</string>
    <string name="action_remove_image">Remove image</string>
    <string name="action_change_image">Change image</string>
    <string name="lists">Lists</string>
    <string name="action_attachment">Add attachment</string>
    <string name="note">Note</string>
    <string name="retry">Retry</string>
    <string name="deleted_single">Item has been deleted.</string>
    <string name="deleted_multiple">Items have been deleted</string>
    <string name="article">Article</string>
    <string name="min_ago">minutes ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="priv">Private</string>
    <string name="action_alarm">Add alarm</string>
    <string name="empty_cat">no category</string>
    <string name="undo">Undo</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">day ago</string>
    <string name="category">Category</string>
    <string name="less_than_min_ago">just now</string>
    <string name="list">List</string>
    <string name="all">All</string>
    <string name="checklist_hint">This is a place for Your list item</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="action_clear">Clear</string>
    <string name="new_list">New list</string>
    <string name="add_item">Add item</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_list">Add new list</string>
    <string name="action_size">Change size</string>
    <string name="action_tag">Add tag</string>
    <string name="action_read_later">Read later</string>
    <string name="action_search">Search</string>
    <string name="action_present">Present View</string>
    <string name="action_edit">Edit View</string>
    <string name="new_note">New note</string>
    <string name="alert_cant_save">Unable to save the path</string>
    <string name="alert_cant_load">Unable to load the path</string>
    <string name="title_activity_details_acitivity">New note</string>
    <string name="delete_question">Are you sure You want to delete?</string>
    <string name="note_content_hint">This is a place for Your note</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="zero_note_chosen"> notes selected</string>
    <string name="one_note_chosen"> note selected</string>
    <string name="two_note_chosen"> notes selected</string>
    <string name="five_note_chosen"> notes selected</string>
    <string name="read_later_title">Read later</string>
    <string name="read_later_message">Add website to read later:</string>
    <string name="title">Title</string>
    <string name="date">april 2015</string>
    <string name="date_long">sunday, 30 april 2015</string>
    <string name="notification_title">Notes</string>
    <string name="notification_text">Touch here, to open note.</string>
    <string name="time">14:10</string>
    <string name="date_default">14 may 2015</string>
    <string name="deleted">Note has been deleted</string>
    <string name="set_alarm">Set alarm</string>
    <string name="loc">Warsaw, Poland</string>
    <string name="action_image">Add image</string>
    <string name="action_draw">Add drawing</string>
    <string name="action_voice">Add voice record</string>
    <string name="action_save">Save</string>
    <string name="info_empty_list">You don\'t have any notes yet!</string>
    <string name="search_hint">Search…</string>
    <string name="search_label">Search</string>
    <string name="edit_note_action">Edit note</string>
    <string name="action_hastag">Add hashtag</string>
    <string name="pick_date">Date</string>
    <string name="pick_time">Time</string>
    <string name="no_tags">No tags</string>
    <string name="action_share">Share</string>
    <string name="tags">Tags</string>
    <string name="title_activity_tags">TagsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="tag">Tag</string>
    <string name="tag_name">#tagname</string>
    <string name="tag_description">This is a default tag.</string>
    <string name="hint_tag_name">Tag name</string>
    <string name="hint_tag_description">Description</string>
    <string name="title_search_activity">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="everything">Everything</string>
    <string name="proffesional">Professional</string>

    <string name="default_tag">#general</string>

    <string name="font_size_preference">fontSize</string>
    <string name="font_size_preference_title">Font size</string>
    <string name="font_size_preference_default">Normal</string>

    <string-array name="font_size_preference_values">
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>
    <string-array name="font_size_preference_options">
        <item>@string/font_size_small</item>
        <item>@string/font_size_normal</item>
        <item>@string/font_size_big</item>
    </string-array>

    <string name="font_size_small">Small</string>
    <string name="font_size_normal">Normal</string>
    <string name="font_size_big">Big</string>
    <string name="font_size_default">14</string>

    <string-array name="lines_preference_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="lines_preference_options">
        <item>@string/lines_1</item>
        <item>@string/lines_2</item>
        <item>@string/lines_3</item>
        <item>@string/lines_4</item>
        <item>@string/lines_5</item>
    </string-array>

    <string name="lines_1">1 line</string>
    <string name="lines_2">2 lines</string>
    <string name="lines_3">3 lines</string>
    <string name="lines_4">4 lines</string>
    <string name="lines_5">5 lines</string>

    <string name="sort_preference">sortOrder</string>
    <string name="sort_preference_title">Sort order</string>
    <string name="sort_preference_default">Last modified - from newest</string>

    <string-array name="sort_preference_options">
        <item>10</item>
        <item>11</item>
        <item>20</item>
        <item>21</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="sort_preference_values">
        <item>@string/sort_created_asc</item>
        <item>@string/sort_created_desc</item>
        <item>@string/sort_modified_asc</item>
        <item>@string/sort_modified_desc</item>
        <item>@string/sort_alphabet_asc</item>
        <item>@string/sort_alphabet_desc</item>
    </string-array>

    <string name="sort_created_asc">First created</string>
    <string name="sort_created_desc">Last created</string>
    <string name="sort_modified_asc">First modified</string>
    <string name="sort_modified_desc">Last modified</string>
    <string name="sort_alphabet_asc">From A to Z</string>
    <string name="sort_alphabet_desc">From Z to A</string>

    <string name="title_activity_settings">Settings</string>
    <string name="search_results_label">Search results for: </string>
    <string name="lines_preference_title">Lines in preview</string>
    <string name="lines_count_preference">linesCount</string>
    <string name="lines_preference_default">3 lines</string>
    <string name="show_date_preference_title">Show date</string>
    <string name="show_date_preference">showDate</string>
    <string name="empty_message">Your notes will be here.</string>
    <string name="notebooks">Notebooks</string>
    <string name="basket">Basket</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="information">Information</string>
    <string name="sort">Sort</string>
    <string name="sort_by_oldest">Sort by oldest</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="take_photo">Take photo</string>
    <string name="read_note">Read note</string>
    <string name="dictate_note">Dictate note</string>
    <string name="speak_now">Speak now</string>
    <string name="dictating_not_supported">Dictating not supported</string>
    <string name="select_all_notes">Select all</string>
    <string name="nigh_mode_preference_title">Auto night mode</string>
    <string name="night_mode_preference">nightMode</string>
    <string name="night_mode">Night mode</string>
    <string name="clear_search_results">Clear search results</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email address</string>
    <string name="email_error">Provided email is not valid</string>
    <string name="password_error">Provided password is not valid</string>
    <string name="google_login">Log in with Google</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="first_name_error">First name cannot be empty</string>
    <string name="last_name_error">Last name cannot be empty</string>
    <string name="action_authenticating">Logging in …</string>
    <string name="create_shortcut_short_label">Create note</string>
    <string name="create_shortcut_long_label">Create note</string>
    <string name="create_shortcut_disabled_label">Note creation disabled</string>
    <string name="empty_list">Nothing to see here yet…</string>

    <plurals name="selected_notes">
        <item quantity="zero">Nothing chosen</item>
        <item quantity="one">%d note chosen</item>
        <item quantity="other">%d notes chosen</item>
    </plurals>

</resources>
