<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/font_size_preference_title"
        android:key="@string/font_size_preference"
        android:defaultValue="@string/font_size_preference_default"
        android:entryValues="@array/font_size_preference_values"
        android:entries="@array/font_size_preference_options"
        android:layout="@layout/prefs_item"
        />

    <SwitchPreference
        android:title="@string/nigh_mode_preference_title"
        android:key="@string/night_mode_preference"
        android:defaultValue="true"
        />

    <ListPreference
        android:title="@string/sort_preference_title"
        android:key="@string/sort_preference"
        android:defaultValue="@string/sort_preference_default"
        android:entryValues="@array/sort_preference_values"
        android:entries="@array/sort_preference_values"
        android:layout="@layout/prefs_item"
        />

</PreferenceScreen>
