<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tomaszmartin.notes.DetailsActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send"
        android:title="@string/action_send"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_size"
        android:title="@string/action_size"
        android:orderInCategory="98"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tag"
        android:title="@string/action_tag"
        android:orderInCategory="97"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_alarm"
        android:title="@string/action_alarm"
        android:orderInCategory="96"
        android:icon="@mipmap/ic_bell"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_image"
        android:title="@string/action_remove_image"
        android:orderInCategory="95" />

    <item
        android:id="@+id/action_record"
        android:title="@string/action_voice"
        android:orderInCategory="94"
        android:icon="@mipmap/ic_microphone"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_image"
        android:title="@string/action_image"
        android:orderInCategory="93"
        android:icon="@mipmap/ic_file_image_box"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_draw"
        android:title="@string/action_draw"
        android:orderInCategory="92"
        android:icon="@mipmap/ic_brush"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_attachment"
        android:title="@string/action_attachment"
        android:orderInCategory="91"
        android:icon="@drawable/ic_attachment_white_24dp"
        app:showAsAction="always" />

</menu>
