<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title="@string/sort"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sort_variant_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_newest"
                android:title="@string/sort_by_newest" />
            <item
                android:id="@+id/action_sort_title"
                android:title="@string/sort_by_title" />
        </menu>
    </item>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="99"
        android:icon="@drawable/ic_magnify_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

</menu>
