<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/list_item_selector"
        >

        <LinearLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/lorem_short"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/category"
                    android:src="@mipmap/ic_calendar" />

                <TextView
                    android:id="@+id/date_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/date"
                    android:textColor="@color/icon_grey"
                    android:textSize="12sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            android:text="@string/lorem_long"
            android:textColor="@color/icon_grey"
            android:textSize="12sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>